# python-midi-controller

./: README.md  pyproject.toml
config/: controller.yml
config/performances/: p_01.yml  p_02.yml  p_03.yml  p_04.yml  p_05.yml  p_06.yml  p_07.yml  p_08.yml
src/: app.py  main.py  midiout.py  prueba_concepto.py  tui_app.py
src/adapters/mappers/: controller_change_mapper.py  filters_builder.py  note_translator.py
src/midifilter/: filter.py  filters.py
src/model/configuration/: configuration_constants.py  configuration_manager.py  controller_change_config.py  controller_config.py  general_config.py  layer_config.py  note_range_config.py  performance_config.py  velocity_range_config.py
src/model/tempo/: tempo_range.py  time_signature.py
src/presentation/: probador_asciimatics.py
src/presentation/models/: file_open_dialog_view_data.py
src/presentation/models/midi_interfaces/: midi_interface_dialog_view_data.py
src/presentation/models/performances/: performance_live_view_data.py  performances_open_dialog_view_data.py
src/presentation/presenters/: file_open_dialog_presenter.py  file_open_dialog_presenter_view.py
src/presentation/presenters/midi_interfaces/: midi_interface_dialog_presenter.py  midi_interface_dialog_presenter_view.py
src/presentation/views/: file_open_dialog_view.py  menu_frame.py  performance_view.py
src/services/: midi_controller_service.py  midi_controller_service_impl.py
src/services/configuration_service/: service.py  service_impl.py
src/services/midi_interface_service/ports/: service.py
tests/: conftest.py  test_conversor.py
(+25 files in other folders)
