[tool.poetry]
name = "midi-controller"
version = "0.1.0"
description = "Python virtual midi controller"
authors = ["Jorge Porras <dpjn316@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.7"
python-rtmidi = "^1.4.9"
pyliblo = "^0.10.0"
osc-lib = "^2.4.2"
Cython = "^0.29.25"
confz = "^1.3.0"
asciimatics = "^1.13.0"
object-mapper = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
